re PR c++/38725 (ICE with goto)

PR c++/38725
	* semantics.c (finish_goto_stmt): Convert destination to
	void *.

	* g++.dg/ext/label11.C: New test.

From-SVN: r143177